# deep-learner

./: .gitignore  .gitmodules  README.md  docker-compose.sh  docker-compose.yml
samples/deployment/tensorrt_starter_practice/: README.md
samples/deployment/tensorrt_starter_practice/chapter2_cuda_programming/2.1_dim_and_index/: CMakeLists.txt  build.sh  run.sh
samples/deployment/tensorrt_starter_practice/chapter2_cuda_programming/2.1_dim_and_index/src/: print_index.cu
samples/handwritten_digit_recognition/: model.py
samples/model/handwritten_digit_recognition/: train.py
